tests/scan/fixtures/validation/negative/clean_go_clean-event-publisher/go.mod
module github.com/example/clean-event-publisher
go 1.21
